# Claude-Usage-Tracker

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: diagnose.rs  main.rs  models.rs  native_interop.rs  poller.rs  theme.rs  tray_icon.rs  updater.rs  window.rs
src/localization/: english.rs  french.rs  german.rs  japanese.rs  mod.rs  spanish.rs
