[package]
name = "claude-usage-tracker"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Claude Usage Tracker"
homepage = "https://github.com/yashkhokhar28"
repository = "https://github.com/yashkhokhar28/Claude-Usage-Tracker"

[package.metadata.winres]
CompanyName = "Yash Khokhar"
ProductName = "Claude Usage Tracker"
FileDescription = "Claude Usage Tracker"
OriginalFilename = "claude-usage-tracker.exe"
InternalName = "ClaudeUsageTracker"
Comments = "https://github.com/yashkhokhar28/Claude-Usage-Tracker"
LegalCopyright = "Copyright (C) 2026 Yash Khokhar"

[dependencies]
ureq = { version = "2", default-features = false, features = ["native-tls", "json"] }
native-tls = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
]

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
